# physical_edge_ai

./: edge_detection.py
open_cv/: edge_detect.py
urdf/: package.xml  setup.py
urdf/launch/: display.launch.py
urdf/simple_urdf_robot/: move_arm.py
urdf/urdf/: two_link_arm.urdf
