<?xml version="1.0"?>
<package format="3">
  <name>simple_urdf_robot</name>
  <version>0.0.0</version>
  <description>Simple 2-link robotic arm URDF project</description>
  <maintainer email="jenifa@example.com">jenifa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
